Fix styles on smallers screens

--- a/src/components/common/SectionTitle/SectionTitle.module.scss
+++ b/src/components/common/SectionTitle/SectionTitle.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: $base-size * 4;
+    margin: $base-size * 4 0;
 
     .title {
         font-size: 22px;
