--- a/src/components/features/Contact/Contact.module.scss
+++ b/src/components/features/Contact/Contact.module.scss
@@ -16,7 +16,7 @@
     }
 
     Button {
-        margin-top: $base-size * 2;
+        margin: $base-size * 2 0;
     }
 }
 
