--- a/src/components/pages/Gallery/Gallery.module.scss
+++ b/src/components/pages/Gallery/Gallery.module.scss
@@ -14,6 +14,10 @@
                 margin: 0 auto;
                 position: relative;
                 bottom: -70%;
+
+                @media (max-width: 375px) {
+                    bottom: -58%;
+                }
             }    
         }
 
